--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -301,9 +301,11 @@
                         <segue destination="1Y0-ag-RV9" kind="relationship" relationship="viewControllers" id="6hT-g8-Hie"/>
                         <segue destination="OP0-bE-IPH" kind="relationship" relationship="viewControllers" id="gNq-Nr-Ooj"/>
                         <segue destination="Wgr-QI-kcz" kind="relationship" relationship="viewControllers" id="X3h-Pe-QVp"/>
+                        <segue destination="lgv-K9-CnS" kind="unwind" identifier="TeacherDisconnect" unwindAction="disconnectedFromTeacherWithSegue:" id="dJ2-fG-54d"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fHk-NS-v17" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="lgv-K9-CnS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-1206" y="-78"/>
         </scene>
@@ -360,7 +362,7 @@
         <image name="Slides" width="19.200000762939453" height="19.200000762939453"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="FjT-lk-NMe"/>
+        <segue reference="MO6-oB-ogx"/>
         <segue reference="Xak-Q6-h3x"/>
     </inferredMetricsTieBreakers>
 </document>
