--- a/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
+++ b/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
@@ -10,52 +10,144 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--DiscussionNav-->
-        <scene sceneID="Cth-Gz-m2Y">
-            <objects>
-                <navigationController id="WdR-2t-UCL" userLabel="DiscussionNav" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="90a-1i-nUE"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="x28-YL-0W4">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="tCX-0c-HtJ" kind="relationship" relationship="rootViewController" id="WCx-JE-ycA"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JlE-Pt-e9z" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="854" y="-741"/>
-        </scene>
         <!--DiscussionBoard-->
-        <scene sceneID="5DF-Nv-ZBL">
+        <scene sceneID="Fvv-ev-djL">
             <objects>
-                <tableViewController id="tCX-0c-HtJ" userLabel="DiscussionBoard" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="eFs-qT-zvV">
+                <viewController id="GOM-3i-b36" userLabel="DiscussionBoard" customClass="DiscussionBoardVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kjb-Tt-JgV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KXS-DZ-wii">
+                                <rect key="frame" x="0.0" y="20" width="375" height="506.5"/>
+                                <connections>
+                                    <segue destination="d67-RU-87d" kind="embed" identifier="ChildMessageTable" id="TMG-0e-0eY"/>
+                                </connections>
+                            </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7RY-K1-Esx" userLabel="Controls">
+                                <rect key="frame" x="0.0" y="526.5" width="375" height="101.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Hqu-8b-m5v">
+                                        <rect key="frame" x="8" y="5" width="359" height="91.5"/>
+                                        <subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Message here" translatesAutoresizingMaskIntoConstraints="NO" id="Kcz-ix-nkf">
+                                                <rect key="frame" x="0.0" y="0.0" width="276" height="91.5"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d6v-cK-3SZ">
+                                                <rect key="frame" x="279" y="0.0" width="80" height="91.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="80" id="xuN-VU-hSs"/>
+                                                </constraints>
+                                                <state key="normal" title="Send"/>
+                                                <connections>
+                                                    <action selector="SendBtn:" destination="GOM-3i-b36" eventType="touchUpInside" id="6tC-3d-Ht6"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="d6v-cK-3SZ" firstAttribute="height" secondItem="Hqu-8b-m5v" secondAttribute="height" id="BxG-7f-BlG"/>
+                                            <constraint firstItem="Kcz-ix-nkf" firstAttribute="height" secondItem="Hqu-8b-m5v" secondAttribute="height" id="CME-cr-FmP"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Hqu-8b-m5v" firstAttribute="top" secondItem="7RY-K1-Esx" secondAttribute="top" constant="5" id="Gaz-4t-8yc"/>
+                                    <constraint firstItem="Hqu-8b-m5v" firstAttribute="leading" secondItem="7RY-K1-Esx" secondAttribute="leading" constant="8" id="Mzn-Qt-sZB"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hqu-8b-m5v" secondAttribute="bottom" constant="5" id="Yxd-FX-rB0"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="175" id="anE-nT-MQj"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hqu-8b-m5v" secondAttribute="trailing" constant="8" id="zSf-ze-LoZ"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KXS-DZ-wii" firstAttribute="top" secondItem="XJE-2T-W4w" secondAttribute="top" id="00X-sG-uFQ"/>
+                            <constraint firstItem="7RY-K1-Esx" firstAttribute="height" secondItem="KXS-DZ-wii" secondAttribute="height" multiplier="0.2" priority="999" id="Abf-I9-2sV"/>
+                            <constraint firstItem="KXS-DZ-wii" firstAttribute="bottom" secondItem="7RY-K1-Esx" secondAttribute="top" id="Oth-IY-dr5"/>
+                            <constraint firstItem="KXS-DZ-wii" firstAttribute="leading" secondItem="XJE-2T-W4w" secondAttribute="leading" id="fjc-rg-yUn"/>
+                            <constraint firstItem="7RY-K1-Esx" firstAttribute="leading" secondItem="XJE-2T-W4w" secondAttribute="leading" id="m5s-Ai-6E0"/>
+                            <constraint firstItem="XJE-2T-W4w" firstAttribute="trailing" secondItem="KXS-DZ-wii" secondAttribute="trailing" id="mq5-Iw-1lJ"/>
+                            <constraint firstItem="XJE-2T-W4w" firstAttribute="trailing" secondItem="7RY-K1-Esx" secondAttribute="trailing" id="poS-YL-4Uq"/>
+                            <constraint firstItem="7RY-K1-Esx" firstAttribute="bottom" secondItem="XJE-2T-W4w" secondAttribute="bottom" constant="10" id="zof-O1-48j"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="XJE-2T-W4w"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="6Ia-Qh-QUc"/>
+                    <connections>
+                        <outlet property="MessageText" destination="Kcz-ix-nkf" id="jfe-MO-IDd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="msx-Vb-w9I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="854" y="-751"/>
+        </scene>
+        <!--Discussion Messages TableVC-->
+        <scene sceneID="gFT-o5-f06">
+            <objects>
+                <tableViewController id="d67-RU-87d" customClass="DiscussionMessagesTableVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="L1j-f1-hZI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="506.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="vZf-ez-flQ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscussionCell" id="PVJ-jR-IyC" customClass="DiscussionMessageCell" customModule="TeacherApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vZf-ez-flQ" id="crn-3O-ihf">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PVJ-jR-IyC" id="rZu-f2-mBh">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="q6W-9t-68j">
+                                            <rect key="frame" x="7" y="2" width="361" height="39.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3O-RN-fKz" userLabel="NameLabel">
+                                                    <rect key="frame" x="0.0" y="0.0" width="361" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="lnm-dL-YnI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiN-D5-Bmg" userLabel="MessageText">
+                                                    <rect key="frame" x="0.0" y="23" width="361" height="16.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="v3O-RN-fKz" firstAttribute="width" secondItem="q6W-9t-68j" secondAttribute="width" id="UWl-2O-UyO"/>
+                                                <constraint firstItem="DiN-D5-Bmg" firstAttribute="width" secondItem="q6W-9t-68j" secondAttribute="width" id="i8c-LL-oBU"/>
+                                            </constraints>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="q6W-9t-68j" firstAttribute="leading" secondItem="rZu-f2-mBh" secondAttribute="leading" constant="7" id="DM5-Qu-IDZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="q6W-9t-68j" secondAttribute="trailing" constant="7" id="FQB-kM-I7Q"/>
+                                        <constraint firstAttribute="bottom" secondItem="q6W-9t-68j" secondAttribute="bottom" constant="2" id="bwg-QN-6Sm"/>
+                                        <constraint firstItem="q6W-9t-68j" firstAttribute="top" secondItem="rZu-f2-mBh" secondAttribute="top" constant="2" id="jxU-aE-eKN"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="MessageText" destination="DiN-D5-Bmg" id="oGA-16-XNF"/>
+                                    <outlet property="NameLabel" destination="v3O-RN-fKz" id="eez-fT-ntj"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="tCX-0c-HtJ" id="Cpn-Up-5li"/>
-                            <outlet property="delegate" destination="tCX-0c-HtJ" id="AlH-fS-efb"/>
+                            <outlet property="dataSource" destination="d67-RU-87d" id="zPi-ST-7kH"/>
+                            <outlet property="delegate" destination="d67-RU-87d" id="Uzu-KK-ud2"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" id="v6d-ae-Jwd"/>
-                    <navigationItem key="navigationItem" id="Vxp-pN-Xhg"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oHq-7P-8PQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="95T-Sz-koU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2105" y="-740"/>
+            <point key="canvasLocation" x="1737" y="-931"/>
         </scene>
         <!--QuestionPosts-->
         <scene sceneID="fiG-3G-HJ3">
@@ -252,8 +344,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="zqr-cz-1KN" kind="relationship" relationship="viewControllers" id="6IS-Lf-U7e"/>
-                        <segue destination="WdR-2t-UCL" kind="relationship" relationship="viewControllers" id="Zbg-76-jGk"/>
                         <segue destination="rYM-js-i8T" kind="relationship" relationship="viewControllers" id="Ey0-jb-oer"/>
+                        <segue destination="GOM-3i-b36" kind="relationship" relationship="viewControllers" id="tIC-cX-veR"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qo9-oo-Mdm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -364,7 +456,7 @@
         <scene sceneID="UpL-hh-H9x">
             <objects>
                 <tableViewController id="uR4-Gn-5t4" userLabel="QuizQuestions" customClass="QuestionsTableVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JRZ-z4-k2T">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JRZ-z4-k2T">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
