--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -260,22 +260,6 @@
             </objects>
             <point key="canvasLocation" x="-1207.2" y="-881.5270935960591"/>
         </scene>
-        <!--Discussion-->
-        <scene sceneID="Cbe-Tj-5AW">
-            <objects>
-                <viewController id="1Y0-ag-RV9" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lJi-P3-aJY">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="ejl-e1-3ht"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Discussion" image="Discussion" landscapeImage="Discussion" id="X6L-Lg-KTW"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ORz-um-7D5" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-124" y="-1188"/>
-        </scene>
         <!--Student Tab Bar Controller-->
         <scene sceneID="BP1-lN-Mf1">
             <objects>
@@ -298,10 +282,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="1Y0-ag-RV9" kind="relationship" relationship="viewControllers" id="6hT-g8-Hie"/>
                         <segue destination="OP0-bE-IPH" kind="relationship" relationship="viewControllers" id="gNq-Nr-Ooj"/>
                         <segue destination="Wgr-QI-kcz" kind="relationship" relationship="viewControllers" id="X3h-Pe-QVp"/>
                         <segue destination="lgv-K9-CnS" kind="unwind" identifier="TeacherDisconnect" unwindAction="disconnectedFromTeacherWithSegue:" id="dJ2-fG-54d"/>
+                        <segue destination="jZ1-Ue-Olb" kind="relationship" relationship="viewControllers" id="h0N-Ft-1tg"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fHk-NS-v17" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -355,9 +339,147 @@
             </objects>
             <point key="canvasLocation" x="-2057" y="-773"/>
         </scene>
+        <!--DiscussionBoard-->
+        <scene sceneID="B0e-dd-Xls">
+            <objects>
+                <viewController id="jZ1-Ue-Olb" userLabel="DiscussionBoard" customClass="DiscussionBoardVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MXE-Dx-FBv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fGk-YZ-3p7">
+                                <rect key="frame" x="0.0" y="88" width="375" height="542.66666666666663"/>
+                                <connections>
+                                    <segue destination="h7O-6f-mcM" kind="embed" identifier="ChildMessageTable" id="res-Yt-yvI"/>
+                                </connections>
+                            </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UZr-OP-dco" userLabel="Controls">
+                                <rect key="frame" x="0.0" y="630.66666666666663" width="375" height="108.33333333333337"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="00e-pj-uIu">
+                                        <rect key="frame" x="8" y="5" width="359" height="98.333333333333329"/>
+                                        <subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Message here" translatesAutoresizingMaskIntoConstraints="NO" id="k79-I2-xYM">
+                                                <rect key="frame" x="0.0" y="0.0" width="276" height="98.333333333333329"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R6f-iy-NFz">
+                                                <rect key="frame" x="279" y="0.0" width="80" height="98.333333333333329"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="80" id="3fE-qB-SvT"/>
+                                                </constraints>
+                                                <state key="normal" title="Send"/>
+                                                <connections>
+                                                    <action selector="SendBtn:" destination="jZ1-Ue-Olb" eventType="touchUpInside" id="gdd-ye-BrC"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="k79-I2-xYM" firstAttribute="height" secondItem="00e-pj-uIu" secondAttribute="height" id="EEU-g1-Bye"/>
+                                            <constraint firstItem="R6f-iy-NFz" firstAttribute="height" secondItem="00e-pj-uIu" secondAttribute="height" id="H7v-lJ-I8Q"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="00e-pj-uIu" secondAttribute="bottom" constant="5" id="3ZN-2H-seR"/>
+                                    <constraint firstItem="00e-pj-uIu" firstAttribute="leading" secondItem="UZr-OP-dco" secondAttribute="leading" constant="8" id="C9S-5O-zI8"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="175" id="F6r-A9-nn0"/>
+                                    <constraint firstAttribute="trailing" secondItem="00e-pj-uIu" secondAttribute="trailing" constant="8" id="Y5m-ZQ-QKG"/>
+                                    <constraint firstItem="00e-pj-uIu" firstAttribute="top" secondItem="UZr-OP-dco" secondAttribute="top" constant="5" id="mPp-iW-pTi"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="UZr-OP-dco" firstAttribute="height" secondItem="fGk-YZ-3p7" secondAttribute="height" multiplier="0.2" priority="999" id="4j3-ko-5P0"/>
+                            <constraint firstItem="UZr-OP-dco" firstAttribute="leading" secondItem="j3n-nc-xEI" secondAttribute="leading" id="A70-fz-z98"/>
+                            <constraint firstItem="fGk-YZ-3p7" firstAttribute="bottom" secondItem="UZr-OP-dco" secondAttribute="top" id="Acw-vH-uQd"/>
+                            <constraint firstItem="fGk-YZ-3p7" firstAttribute="leading" secondItem="j3n-nc-xEI" secondAttribute="leading" id="P78-Xb-0ok"/>
+                            <constraint firstItem="fGk-YZ-3p7" firstAttribute="top" secondItem="j3n-nc-xEI" secondAttribute="top" id="c75-x8-J6h"/>
+                            <constraint firstItem="UZr-OP-dco" firstAttribute="bottom" secondItem="j3n-nc-xEI" secondAttribute="bottom" constant="10" id="cCG-fD-V4j"/>
+                            <constraint firstItem="j3n-nc-xEI" firstAttribute="trailing" secondItem="fGk-YZ-3p7" secondAttribute="trailing" id="ur2-g1-wk4"/>
+                            <constraint firstItem="j3n-nc-xEI" firstAttribute="trailing" secondItem="UZr-OP-dco" secondAttribute="trailing" id="vEr-pp-NOL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="j3n-nc-xEI"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="rYR-W7-d0x"/>
+                    <connections>
+                        <outlet property="MessageText" destination="k79-I2-xYM" id="nzc-Zq-Eze"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rLc-FH-nx0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-124" y="-1188"/>
+        </scene>
+        <!--Discussion Messages TableVC-->
+        <scene sceneID="7XN-TI-7bU">
+            <objects>
+                <tableViewController id="h7O-6f-mcM" customClass="DiscussionMessagesTableVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="PAf-sF-HIa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="542.66666666666663"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscussionCell" id="lnz-ei-ZeF" customClass="DiscussionMessageCell" customModule="TeacherApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lnz-ei-ZeF" id="hNf-8x-77p">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="BzA-NJ-MVU">
+                                            <rect key="frame" x="7" y="2" width="361" height="39.666666666666664"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R2V-sX-Moj" userLabel="NameLabel">
+                                                    <rect key="frame" x="0.0" y="0.0" width="361" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="M4a-dM-kXB"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.042330619530000002" green="0.38885967269999999" blue="0.8980392157" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvE-Qf-z5Y" userLabel="MessageText">
+                                                    <rect key="frame" x="0.0" y="23" width="361" height="16.666666666666671"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="hvE-Qf-z5Y" firstAttribute="width" secondItem="BzA-NJ-MVU" secondAttribute="width" id="KTW-4Q-ojT"/>
+                                                <constraint firstItem="R2V-sX-Moj" firstAttribute="width" secondItem="BzA-NJ-MVU" secondAttribute="width" id="b4J-Du-yVN"/>
+                                            </constraints>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="BzA-NJ-MVU" firstAttribute="leading" secondItem="hNf-8x-77p" secondAttribute="leading" constant="7" id="GQC-PU-ekr"/>
+                                        <constraint firstItem="BzA-NJ-MVU" firstAttribute="top" secondItem="hNf-8x-77p" secondAttribute="top" constant="2" id="Ka0-wq-bUW"/>
+                                        <constraint firstAttribute="bottom" secondItem="BzA-NJ-MVU" secondAttribute="bottom" constant="2" id="cZD-jN-jJm"/>
+                                        <constraint firstAttribute="trailing" secondItem="BzA-NJ-MVU" secondAttribute="trailing" constant="7" id="eYt-wv-e6F"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="MessageText" destination="hvE-Qf-z5Y" id="gKt-jG-iIf"/>
+                                    <outlet property="NameLabel" destination="R2V-sX-Moj" id="5PT-kw-DYG"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="h7O-6f-mcM" id="XDg-44-kNx"/>
+                            <outlet property="delegate" destination="h7O-6f-mcM" id="HNn-c0-rFQ"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nyX-rh-u3g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="914" y="-1188"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="Discussion" width="19.200000762939453" height="19.200000762939453"/>
         <image name="Question" width="19.200000762939453" height="21.120000839233398"/>
         <image name="Slides" width="19.200000762939453" height="19.200000762939453"/>
     </resources>
